bgg/dbservice.yaml
apiVersion: v1
kind: Service

metadata:
   name: bgg-db-svc
   namespace: workshop02
   labels:
      name: bgg-db-svc

spec:
   type: ClusterIP
   selector:
      app.kubernetes.io/name: bgg-app-pod
   ports:
   - name: mysql-port-svc
     port: 3306
     targetPort: bgg-port
